Fix for tool windows like insert URL (overflow and the labels within).

--- a/froala_editor/static/froala_editor/css/froala-django.css
+++ b/froala_editor/static/froala_editor/css/froala-django.css
@@ -11,3 +11,10 @@ form .fr-element p {
     clear: both;
 }
 
+div.form-row {
+    overflow: visible;
+}
+
+.aligned label:not(.vCheckboxLabel):after {
+    content: none;
+}
